service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: product
  name: product
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: product
  type: ClusterIP
status:
  loadBalancer: {}
#apiVersion: v1
#kind: Service
#metadata:
#  creationTimestamp: null
#  labels:
#    app: product
#  name: product
#spec:
#  ports:
#  - name: 8000-8000
#    port: 8000
#    protocol: TCP
#    targetPort: 8000
#  selector:
#    app: product
#  type: ClusterIP
#status:
#  loadBalancer: {}
