ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-http-80
spec:
  rules:
  - host: http://hybrid-cloud-team-22-ucllteam22.ocp-ucll-40cb0df2b03969eabb3fac6e80373775-0000.eu-de.containers.appdomain.cloud/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 8080
